--- a/debian/control
+++ b/debian/control
@@ -1,15 +1,36 @@
-Source: template-repository
-Section: unknown
+Source: wayvnc
 Priority: optional
-Maintainer: Tsic404 <liuheng@deepin.org>
-Build-Depends: debhelper (>= 11)
-Standards-Version: 4.1.3
-Homepage: https://github.com/deepin-community/template-repository
-#Vcs-Browser: https://salsa.debian.org/debian/deepin-community-template-repository
-#Vcs-Git: https://salsa.debian.org/debian/deepin-community-template-repository.git
+Section: admin
+Maintainer: Johannes Schauer Marin Rodrigues <josch@debian.org>
+Uploaders:
+ Boyuan Yang <byang@debian.org>,
+Standards-Version: 4.6.2
+Build-Depends:
+ debhelper-compat (= 13),
+ meson,
+ pkg-config,
+ scdoc,
+ libpam0g-dev,
+ libpixman-1-dev,
+ libdrm-dev,
+ libxkbcommon-dev,
+ libwayland-dev,
+ libaml-dev (>= 0.3.0),
+ libjansson-dev,
+ libneatvnc-dev (>= 0.6.0),
+ zlib1g-dev,
+ libturbojpeg0-dev,
+ gnutls-dev,
+Rules-Requires-Root: no
+Homepage: https://github.com/any1/wayvnc
+Vcs-Git: https://salsa.debian.org/debian/wayvnc.git
+Vcs-Browser: https://salsa.debian.org/debian/wayvnc
 
-Package: template-repository
+Package: wayvnc
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}
-Description: <insert up to 60 chars description>
- <insert long description, indented with spaces>
+Depends: ${misc:Depends}, ${shlibs:Depends},
+Description: VNC server for wlroots-based Wayland compositors
+ It attaches to a running Wayland session, creates virtual input devices, and
+ exposes a single display via the RFB protocol. The Wayland session may be a
+ headless one, so it is also possible to run wayvnc without a physical display
+ attached.
